feat: add 1st draft of weather-display
- prepare packaging (changing stuff from the template..)
- add 1st weather api
- add a icon-theme to actually display something

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -19,6 +19,8 @@
     "sourceMap": true,
     "skipLibCheck": true,
     "forceConsistentCasingInFileNames": true,
-    "resolveJsonModule": true
+    "resolveJsonModule": true,
+    "noEmit": true
   }
 }
+
