--- a/assets/manifest.json
+++ b/assets/manifest.json
@@ -2,25 +2,25 @@
   "Actions": [
     {
       "Icon": "images/action1.icon",
-      "Name": "Your first action",
+      "Name": "Weather",
       "States": [
         {
-          "Image": "images/action1.key",
+          "Image": "images/transparent-pixel",
           "TitleAlignment": "middle",
           "FontSize": "15"
         }
       ],
       "SupportedInMultiActions": false,
       "Tooltip": "",
-      "UUID": "reverse.dns.formatted.namespace.action"
+      "UUID": "de.rweich.weather.action"
     }
   ],
   "SDKVersion": 2,
-  "Author": "your name",
+  "Author": "rweich",
   "CodePath": "plugin.html",
   "PropertyInspectorPath": "propertyinspector.html",
-  "Name": "streamdeck template",
-  "Description": "a description",
+  "Name": "Weather",
+  "Description": "a weather widget",
   "Icon": "images/pluginIcon",
   "Version": "0.0.0-development",
   "OS": [
