--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@rweich/streamdeck-ts-template",
+  "name": "@rweich/streamdeck-weather",
   "version": "0.0.0-development",
-  "description": "a template to create streamdeck plugins in typescript",
+  "description": "streamdeck weather widget",
   "private": true,
   "author": "rweich",
   "license": "MIT",
@@ -17,7 +17,14 @@
     "update-template": "update-template https://github.com/rweich/streamdeck-ts-template"
   },
   "dependencies": {
-    "@rweich/streamdeck-ts": "^2.0.0"
+    "@rweich/streamdeck-events": "^1.3.4",
+    "@rweich/streamdeck-ts": "^2.0.0",
+    "@sinclair/typebox": "^0.20.5",
+    "ajv": "^8.6.2",
+    "axios": "^0.21.4",
+    "axios-logger": "^2.5.0",
+    "loglevel": "^1.7.1",
+    "loglevel-plugin-prefix": "^0.8.4"
   },
   "devDependencies": {
     "@amille/semantic-release-plugins": "^3.3.10",
@@ -38,11 +45,13 @@
     "babel-loader": "^8.2.2",
     "conventional-changelog-conventionalcommits": "^4.6.0",
     "copy-webpack-plugin": "^9.0.0",
+    "fork-ts-checker-webpack-plugin": "^6.3.3",
     "husky": "^6.0.0",
     "jsonfile": "^6.1.0",
     "lint-staged": "^11.0.0",
     "rimraf": "^3.0.2",
     "semantic-release": "^17.4.3",
+    "source-map-loader": "^3.0.0",
     "ts-node": "^10.0.0",
     "ts-type-guards": "^0.7.0",
     "typescript": "^4.2.4",
@@ -50,8 +59,11 @@
     "webpack": "^5.37.1",
     "webpack-cli": "^4.7.0"
   },
-  "repository": "rweich/streamdeck-ts-template",
-  "bugs": "https://github.com/rweich/streamdeck-ts-template/issues",
+  "engines": {
+    "node": ">=12.0.0"
+  },
+  "repository": "rweich/streamdeck-weather",
+  "bugs": "https://github.com/rweich/streamdeck-weather/issues",
   "commitlint": {
     "extends": [
       "@commitlint/config-conventional"
